Week5-UptimeKuma-oefening/uptimekuma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma-app
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1.11.4
          ports:
          - name: uptime-kuma
            containerPort: 3001
            protocol: TCP
          volumeMounts:
          - name: uptime-kuma-pvc-storage
            mountPath: /app/data
      volumes:
      - name: uptime-kuma-pvc-storage
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc
      restartPolicy: Always
