Week5-UptimeKuma-oefening/uptimekuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: uptime-kuma-app
  annotations: 
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  tls:
  - hosts:
    - up.75.co.ucll.cloud
    secretName: uptime-kuma-tls
  rules:
    - host: up.75.co.ucll.cloud
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: uptime-kuma-service
                port:
                  number: 3001
